<resources>
    <string name="app_name">HappyPets</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <!--    string for tab layout-->
    <string name="info_tab">Info</string>
    <string name="search_tab">Search</string>
    <string name="pets_tab">Pets</string>

    <!--    string for tab layout-->
    <string name="pets_preview">Pets Preview</string>
    <string name="owner_preview">Owner Preview</string>

    <string name="drawer_open">Open</string>
    <string name="drawer_close">Close</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="drawer_string_profile">Profile</string>
    <string name="drawer_layout_string_chat">Chat</string>
    <string name="drawer_layout_string_favorite">Favorite</string>
    <string name="drawer_layout_string_communication">Communication</string>
    <string name="drawer_layout_string_share">Share</string>
    <string name="drawer_layout_string_logout">Logout</string>
    <string name="search_fragment_card_cat">Cat</string>
    <string name="search_fragment_card_dog">Dog</string>
    <string name="search_fragment_card_fish">Fish</string>
    <string name="search_fragment_card_rabbit">Rabbit</string>
    <string name="search_fragment_card_bird">Bird</string>
    <string name="search_fragment_card_others">Others</string>
    <string name="search_fragment_cardview_categories">CHOOSE TYPE OF PET TO ADOPT</string>
    <string name="button_add_pets">Add Pets</string>
    <string name="chat_enter_the_message">Enter the Message</string>
    <string name="chat_sample_text">This is a sample text</string>
    <string name="chat_user_name">User name</string>
    <string name="search_pet_here"><i>Search pet here</i></string>
    <string name="share_your_beloved_pet">Share your beloved pet</string>
    <string name="oops_list_is_empty">OOPS!! List is empty</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="create_account">Create \nAccount</string>
    <string name="forget_password">Forget your password? Recovery it</string>
    <string name="update_profile">Update Profile</string>
    <string name="name">Name</string>
    <string name="user_profile_email">Email</string>
    <string name="user_profile_pincode">Pincode</string>
    <string name="user_profile_phone">Phone Number</string>
    <string name="address">Address</string>
    <string name="save">Save</string>
    <string name="pets_name">Pet\'s Name</string>
    <string name="pet_s_type">Type</string>
    <string name="pet_s_gender">Gender</string>
    <string name="pet_s_breed">Pet\'s Breed</string>
    <string name="pet_s_color">Pet\'s Color</string>
    <string name="delete_pet_dialog">Are you sure, you want to delete this pet?</string>
    <string name="profile_build_dialog">Please complete your profile</string>
    <string name="cancel">Cancel</string>
    <string name="delete">Delete</string>
    <string name="recover">Recover</string>
    <string name="get_new_password">Please enter otp received on your email and enter new password:</string>
    <string name="new_password">New Password</string>
    <string name="Otp">Otp</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="send">Send</string>

    <!--    string for drop down menu -->
    <string-array name="pets_menu_gender">
        <item>Male</item>
        <item>Female</item>
        <item>Other</item>
    </string-array>

    <string-array name="pets_menu_type">
        <item>Dog</item>
        <item>Cat</item>
        <item>Fish</item>
        <item>Rabbit</item>
        <item>Bird</item>
        <item>Other</item>
    </string-array>

</resources>

