<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ImageView
        android:padding="5dp"
        android:src="@drawable/recovery_email"
        android:background="@color/pink_300"
        android:layout_width="match_parent"
        android:layout_height="90dp"/>

    <TextView
        android:text="@string/get_new_password"
        android:padding="10dp"
        android:textSize="20sp"
        android:textColor="@color/pink_300"
        android:textStyle="bold"
        android:layout_marginTop="20dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/new_password_dialog_token"
        android:hint="@string/token"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/new_password_dialog_new_password"
        android:hint="@string/new_password"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <EditText
        android:id="@+id/new_password_dialog_confirm_password"
        android:hint="@string/confirm_password"
        android:textAlignment="center"
        android:layout_marginTop="10dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_marginBottom="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:gravity="center"
        android:padding="10dp"
        android:layout_marginBottom="10dp"
        android:layout_height="wrap_content">

        <Button
            android:text="@string/cancel"
            android:id="@+id/new_password_dialog_cancel"
            android:layout_marginRight="50dp"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>
        <Button
            android:text="@string/send"
            android:id="@+id/new_password_dialog_send"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>


    </LinearLayout>



</LinearLayout>