<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

        <ImageView
            android:src="@drawable/delete_dialog"
            android:background="@color/pink_300"
            android:layout_width="match_parent"
            android:layout_height="90dp"/>

        <TextView
            android:padding="10dp"
            android:textSize="25sp"
            android:textColor="@color/pink_300"
            android:textStyle="bold"
            android:text="@string/delete_pet_dialog"
            android:layout_margin="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>

        <LinearLayout
            android:orientation="horizontal"
            android:layout_width="match_parent"
            android:gravity="center"
            android:padding="10dp"
            android:layout_marginBottom="10dp"
            android:layout_height="wrap_content">

                <Button
                    android:id="@+id/dialog_view_cancel"
                    android:layout_marginRight="50dp"
                    android:text="@string/cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>
                <Button
                    android:id="@+id/dialog_view_delete"
                    android:text="@string/delete"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"/>


        </LinearLayout>

</LinearLayout>