<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UpdateProfileActivity">


    <androidx.cardview.widget.CardView
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:isScrollContainer="true"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:background="@drawable/card_border"
                    android:padding="5dp"
                    android:id="@+id/update_profile_image"
                    android:src="@drawable/profile_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/update_profile_name_container"
                    android:layout_below="@id/update_profile_image"
                    android:hint="@string/name"
                    app:startIconDrawable="@drawable/update_profile_name"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/update_profile_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage" />

                </com.google.android.material.textfield.TextInputLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/update_profile_email_container"
                    android:layout_below="@id/update_profile_name_container"
                    app:startIconDrawable="@drawable/update_profile_email"
                    android:hint="@string/user_profile_email"
                    app:suffixText=".com"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/update_profile_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textEmailAddress"/>

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/update_profile_phone_container"
                    android:layout_below="@id/update_profile_email_container"
                    app:startIconDrawable="@drawable/profile_phone"
                    android:hint="@string/user_profile_phone"
                    android:layout_margin="5dp"
                    app:prefixText="+91"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/update_profile_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/update_profile_other_container"
                    android:layout_below="@id/update_profile_phone_container"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <androidx.cardview.widget.CardView
                        android:layout_marginEnd="10dp"
                        app:cardElevation="10dp"
                        app:cardCornerRadius="10dp"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content">

                        <LinearLayout
                            android:id="@+id/update_profile_dob"
                            android:orientation="horizontal"
                            android:padding="10dp"
                            android:layout_width="match_parent"
                            android:layout_height="match_parent">

                            <ImageView
                                android:layout_marginRight="10dp"
                                android:src="@drawable/profile_dob"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                            <TextView
                                android:text="Date of Birth"
                                android:textSize="17sp"
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"/>

                        </LinearLayout>



                    </androidx.cardview.widget.CardView>



                    <TextView
                        android:id="@+id/update_profile_dob_display"
                        android:text="Not selected"
                        android:textSize="17sp"
                        android:padding="5dp"
                        android:textStyle="bold"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"/>


                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/update_profile_address_container"
                    android:layout_below="@id/update_profile_other_container"
                    app:startIconDrawable="@drawable/profile_address"
                    android:hint="@string/address"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/update_profile_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textMultiLine" />

                </com.google.android.material.textfield.TextInputLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/update_profile_pincode_container"
                    android:layout_below="@id/update_profile_address_container"
                    app:startIconDrawable="@drawable/profile_pincode"
                    android:hint="@string/user_profile_pincode"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/update_profile_pincode"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="numberDecimal" />

                </com.google.android.material.textfield.TextInputLayout>



                <Button
                    android:id="@+id/update_profile_save"
                    android:text="@string/save"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/update_profile_pincode_container"
                    android:background="@drawable/bg_button_rectangle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>



        </ScrollView>



    </androidx.cardview.widget.CardView>

</RelativeLayout>