<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Activity.UpdateProfileActivity">


    <androidx.cardview.widget.CardView
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_margin="30dp"
        android:elevation="10dp"
        app:cardCornerRadius="10dp"
        app:cardElevation="10dp">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="match_parent">


            <RelativeLayout
                android:isScrollContainer="true"
                android:padding="10dp"
                android:orientation="vertical"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <de.hdodenhof.circleimageview.CircleImageView
                    android:id="@+id/pet_profile_image"
                    android:background="@drawable/card_border"
                    android:padding="5dp"
                    android:src="@drawable/profile_image"
                    android:layout_centerHorizontal="true"
                    android:layout_marginTop="10dp"
                    android:layout_width="100dp"
                    android:layout_height="100dp"/>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/register_pet_name_container"
                    android:layout_below="@id/pet_profile_image"
                    android:hint="@string/pets_name"
                    app:startIconDrawable="@drawable/paw"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/red_700"
                    app:helperText="Required*"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_pet_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="textShortMessage" />

                </com.google.android.material.textfield.TextInputLayout>


                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/register_pet_other_container"
                    android:layout_below="@id/register_pet_name_container"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:id="@+id/register_pet_type_container"
                        android:hint="@string/pet_s_type"
                        app:startIconDrawable="@drawable/paw"
                        android:layout_marginEnd="20dp"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/register_pet_type"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>


                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense.ExposedDropdownMenu"
                        android:id="@+id/register_pet_gender_container"
                        android:hint="@string/pet_s_gender"
                        app:startIconDrawable="@drawable/paw"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <AutoCompleteTextView
                            android:id="@+id/register_pet_gender"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="none"/>

                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>

                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/register_pet_breed_container"
                    android:layout_below="@id/register_pet_other_container"
                    app:startIconDrawable="@drawable/paw"
                    android:hint="@string/pet_s_breed"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/red_700"
                    app:helperText="Required*"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_pet_breed"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>

                <LinearLayout
                    android:orientation="horizontal"
                    android:id="@+id/register_pet_number_container"
                    android:layout_below="@id/register_pet_breed_container"
                    android:layout_width="match_parent"
                    android:padding="10dp"
                    android:gravity="center"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/register_pet_age_container"
                        android:hint="Age"
                        android:layout_marginEnd="20dp"
                        app:startIconDrawable="@drawable/paw"
                       android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_pet_age"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>

                    <com.google.android.material.textfield.TextInputLayout
                        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                        android:id="@+id/register_pet_weight_container"
                        app:startIconDrawable="@drawable/paw"
                        android:hint="Weight"
                        android:layout_weight="1"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content">

                        <com.google.android.material.textfield.TextInputEditText
                            android:id="@+id/register_pet_weight"
                            android:layout_width="match_parent"
                            android:layout_height="wrap_content"
                            android:inputType="numberDecimal" />

                    </com.google.android.material.textfield.TextInputLayout>



                </LinearLayout>


                <com.google.android.material.textfield.TextInputLayout
                    style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                    android:id="@+id/register_pet_color_container"
                    android:layout_below="@id/register_pet_number_container"
                    app:startIconDrawable="@drawable/paw"
                    android:hint="@string/pet_s_color"
                    app:helperTextEnabled="true"
                    app:helperTextTextColor="@color/red_700"
                    app:helperText="Required*"
                    android:layout_margin="5dp"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <com.google.android.material.textfield.TextInputEditText
                        android:id="@+id/register_pet_color"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:inputType="text"/>

                </com.google.android.material.textfield.TextInputLayout>






                <Button
                    android:id="@+id/register_pet_save"
                    android:text="@string/save"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="20dp"
                    android:layout_alignParentBottom="true"
                    android:layout_centerHorizontal="true"
                    android:layout_below="@id/register_pet_color_container"
                    android:background="@drawable/bg_button_rectangle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"/>

            </RelativeLayout>



        </ScrollView>



    </androidx.cardview.widget.CardView>

</RelativeLayout>